# LLM-AbsCon

./: .env_template  .gitignore  README.md  pyproject.toml
abscon/: abstraction.py  base.py  concretization.py  llms.py  utils.py
activity/: README.md  evaluation.ipynb  evaluation_utils.py  influence_of_consistency.ipynb  parser.py  prompts.py  run_even.sh  run_generation.py  run_generation_parallel.py  utils.py
activity/data/: paged.json  paged_raw.json  paged_small.json
activity/measurements/: impact_of_candidates.py
activity/results/Meta-Llama-3.1-70B-Instruct/paged/: results_1.csv  results_11.csv  results_12.csv  results_13.csv  results_14.csv  results_15.csv  results_16.csv  results_17.csv  results_18.csv  results_19.csv  results_20.csv  results_7.csv  (+39 more)
activity/scripts/: generate_abscon.py  generate_abscon.sh  sample_dataset.py
measurements/: rq2.ipynb
programs/: README.md  evaluation.ipynb  evaluation_utils.py  influence_of_consistency.ipynb  parser.py  program_executor.py  prompts.py  run_generation.py  test_program_parser.py  utils.py
programs/data/: clevr.json
programs/measurements/: impact_of_candidates.py
programs/scripts/: generate_abscon.py  generate_abscon.sh  sample_dataset.py
taxonomy/: README.md  evaluation.ipynb  evaluation_utils.py  influence_of_consistency.ipynb  output_parsers.py  prompts.py  run_generation.py  run_generation_parallel.py  utils.py
taxonomy/data/: ccs.csv  wordnet.csv  wordnet_full.csv
taxonomy/measurements/: impact_of_candidates.py
taxonomy/scripts/: generate_abscon.py  generate_abscon.sh  sample_wordnet.py
(+1108 files in other folders)
