[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "abscon"
version = "0.0.1"
authors = []
description = ""

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
networkx = "^3.0"
pandas = "^1.5.3"
tqdm = "^4.66.4"
loguru = "^0.7.2"
sentence_transformers = "^3.1.0"
thefuzz = "^0.22.1"

langchain_openai = "0.1.23"
tiktoken = "0.7.0"
langchain_core = "0.2.38"
pydantic = "1.10.17"
PuLP = "2.9.0"

[tool.pytest.ini_options]
pythonpath = [
  "."
]